correction association étudiante

--- a/Martin_Bouchard.tex
+++ b/Martin_Bouchard.tex
@@ -271,7 +271,7 @@
 					 {Développeur back-end et front-end sur une application web en Ruby on Rails }
 					 {$\bullet$ TDD $\bullet$ Développement Agile $\bullet$ Architecture MVC $\bullet$ Git $\bullet$ Ruby on Rails $\bullet$ Rspec/test \\ $\bullet$ Déploiement code production  }
 
-\cventre[2em]{2014}{Développer Web}{Contrat}{ Un re-design d'une page web pour un avocat. Le client voulait un design plus modern qui serait \emph{ responsive design } pour les visiteurs mobile. \href{http://www.avocatcriminel.ca/}{www.avocatcriminel.ca}}
+\cventre[1.2em]{2014}{Développer Web}{Contrat}{ Un re-design d'une page web pour un avocat. Le client voulait un design plus modern qui serait \emph{ responsive design } pour les visiteurs mobile. \href{http://www.avocatcriminel.ca/}{www.avocatcriminel.ca}}
 
 
 \cventre[2em]{2013}{Stagiaire (Développeur)}
@@ -463,7 +463,7 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 {
 \subsection{Implications sociales}
 \begin{itemize}
-\item[$\bullet$] Associations étudiantes
+\item[$\bullet$] Association étudiante
 \item CSGAMES
 \end{itemize}
 }
