correction fautes et netoyage template

--- a/Martin_Bouchard.tex
+++ b/Martin_Bouchard.tex
@@ -271,19 +271,19 @@
 					 {Développeur back-end et front-end sur une application web en Ruby on Rails }
 					 {$\bullet$ TDD $\bullet$ Développement Agile $\bullet$ Architecture MVC $\bullet$ Git $\bullet$ Ruby on Rails $\bullet$ Rspec/test \\ $\bullet$ Déploiement code production  }
 
-\cventre[1.2em]{2014}{Développer Web}{Contrat}{ Un re-design d'une page web pour un avocat. Le client voulait un design plus modern qui serait \emph{ responsive design } pour les visiteurs mobile. \href{http://www.avocatcriminel.ca/}{www.avocatcriminel.ca}}
+\cventre[1.2em]{2014}{Développeur Web}{Contrat}{ Un re-design d'une page web pour un avocat. Le client voulait un design plus moderne qui serait \emph{ responsive design } pour les visiteurs mobiles. \href{http://www.avocatcriminel.ca/}{www.avocatcriminel.ca}}
 
 
 \cventre[2em]{2013}{Stagiaire (Développeur)}
 {Ville de Montréal}
 {Conception d'applications d'affaires sur la plateforme de développement web Apex de Oracle.}
-{$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end(Apex) de page web \\$\bullet$ Conception de schema bd  $\bullet$ Intégration avec LDAP $\bullet$ Architecture d'application sous forme de service}
+{$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end(Apex) de page web \\$\bullet$ Conception de schema bd  $\bullet$ Intégration avec LDAP $\bullet$ Architecture d'applications sous forme de services}
 
 
 \cventre[0.5em]{2012}{Programmeur}
 {Fasken Martineau DuMoulin, S.E.N.C.R.L}
-{Programmation de templates avec l'API de XpressDox. Cette API s'intègre avec Microsoft Word et automatise la génération de document. J'étais le seul qui s'avais utiliser Xpressdox dans l'entreprise.}
-{$\bullet$ Développer un framework $\bullet$ Proposer des solutions techniques aux besoins des avocats \newline{} $\bullet$ Trouver des solutions à des problèmes sans ressource}
+{Programmation de templates avec l'API de XpressDox. Cette API s'intègre avec Microsoft Word et automatise la génération de documents. J'étais la personne ressource de Xpressdox dans l'entreprise.}
+{$\bullet$ Développer un framework $\bullet$ Proposer des solutions techniques aux besoins des avocats \newline{} $\bullet$ Trouver des solutions à des problèmes avec peu de ressources disponibles  }
  
 
 \section{Compétence Informatique}
@@ -298,32 +298,7 @@
 \cvdoubleitem{Outils Développement}{Vim, SublimeText, RubyMine, Intellij, Android Studio}
 			 {Language Markup}{\LaTeX{}, Markdown}\vspace{1em}
 
-\/*
-\begin{tabular}{ll}
-\textbf{Langages} & 
-html/css/php/javascript, jQuery Mobile, Apex, PL/SQL, C/C++, Java, Bash, Python,    Latex, Assembleur  \\
-\textbf{Génie} &
-UML, Design Patterns\\
-\textbf{BD} & MySQL, Oracle \\
-\textbf{CMS} & WordPress, Django \\
-\textbf{Systèmes} & Windows, Linux \\
-\textbf{IDE} & Eclipse, vim, SublimeText, Photoshop
-\end{tabular}
-*/
-%\end{comment}
-\begin{comment}
-\begin{tabular*}{\linewidth}{
-				   p{\dimexpr 0.15\linewidth-1\tabcolsep }  
-                   p{\dimexpr 0.25\linewidth-1\tabcolsep } 
-                   p{\dimexpr 0.25\linewidth-1\tabcolsep }  
-                   p{\dimexpr 0.25\linewidth-1\tabcolsep } 
-                   } 
-   		         & Programmation & Web/Framework & BD \vspace{1.5em}\tabularnewline
-À l'aise		 &               &   Django,WordPress            & \tabularnewline[10ex]
-Très à l'aise 	 &               &   Ruby on rails           & \tabularnewline[10ex]
-Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
-\end{tabular*}
-\end{comment}
+
 \clearpage
 
 
@@ -363,12 +338,12 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 \begin{itemize}\setlength{\itemsep}{1pt}
   \setlength{\parskip}{5pt}
   \setlength{\parsep}{0pt}
-\item Implémentation des fonctionnalitées de la commande \emph{find} d'Unix
+\item Implémentation des fonctionnalités de la commande \emph{find} d'Unix
 \item Simulation de l'algorithme de remplacement des pages (Optimial, Horloge, LRU). Conception d'un tableau dynamique 2 dimensions.
 
 \item Jeu de \emph{snake} avec une implémentation d'un tableau dynamique
 \item Système interrogeable prenant en entrée des données de location de personnes. Le temps d'éxécution du programme devait être optimisé \emph{(meilleur temps de la classe)}. Implémentation d'un Arbre-map
-\item Système de recherche dans un Graph. Implémentation de l'algorythme de Tarjan et Dijkstra
+\item Système de recherche dans un Graph. Implémentation de l'algorithme de Tarjan et Dijkstra
 \end{itemize}
 }
 \cvdetaillist{\small Nodejs/Mongodb HTML/CSS}{$\bullet$ Application web couvrant la plupart des verbes http sur une base de données mongodb   \newline\small{\href{http://gitmycode.github.io/inf4375-tp3/}{http://gitmycode.github.io/inf4375-tp3/}}}
@@ -406,7 +381,7 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 {Un site designé sur photoshop et transposé en html/css.}}
 {
 \cvboxitem{Site Web}{contrat}{http://gitmycode.github.io/avocatmontreal/}{ HTML/CSS/Javascript}
-{Un contrat de mise à jours d'un siteweb vers un design plus moderne et mobile friendly }
+{Un contrat de mise à jour d'un siteweb vers un design plus moderne et mobile friendly }
 }
 \cvtriplebox
 {\cvboxitem{Android Game}{en cours}{https://github.com/GitMyCode/laser-game}{Unity,C\#}{Une petite idée de jeu android que j'ai eue. C'est principalement pour le plaisir de le faire plus que pour le jeu. C'est un jeu en 2d real-time multiplayer}}
