--- a/Martin_Bouchard.tex
+++ b/Martin_Bouchard.tex
@@ -254,7 +254,7 @@
 
 
 \section{Sommaire}
-{Diplômé d'un baccalauréat en programmation et génie logiciel. Je perfectionne et étends également mes connaissances de manière autodidacte dans mes temps libres. J'ai un intérêt pour les problèmes algorithmiques ( particulierement ceux sur \\\href{https://code.google.com/codejam}{code.google.com/codejam}) et les applications web. J'ai de l'expérience dans l'ensemble du processus de développement logiciel, de la conception jusqu'à la mise en production et la maintenance.}
+{Diplômé d'un baccalauréat en programmation et génie logiciel. Je perfectionne et étends également mes connaissances de manière autodidacte dans mes temps libres. J'ai un intérêt pour les problèmes algorithmiques ( particulièrement ceux sur \\\href{https://code.google.com/codejam}{code.google.com/codejam} ) et les applications web. J'ai de l'expérience dans l'ensemble du processus de développement logiciel, de la conception jusqu'à la mise en production et la maintenance.}
 \vspace{-1em}
 \section{Formation}
 
@@ -265,7 +265,7 @@
 
 
 
-\section{Expérience Professionnelle}
+\section{Expériences Professionnelles}
 
 \cventre[2em]{2014}{Stagiaire (Développeur-web) }{Telica Software}
 					 {Développeur back-end et front-end sur une application web en Ruby on Rails }
@@ -277,7 +277,7 @@
 \cventre[2em]{2013}{Stagiaire (Développeur)}
 {Ville de Montréal}
 {Conception d'applications d'affaires sur la plateforme de développement web Apex de Oracle.}
-{$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end(Apex) de page web \\$\bullet$ Conception de schema bd  $\bullet$ Intégration avec LDAP $\bullet$ Architecture d'applications sous forme de services}
+{$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end(Apex) de pages web \\$\bullet$ Conception de schema bd  $\bullet$ Intégration avec LDAP $\bullet$ Architecture d'applications sous forme de services}
 
 
 \cventre[0.5em]{2012}{Programmeur}
@@ -286,14 +286,14 @@
 {$\bullet$ Développer un framework $\bullet$ Proposer des solutions techniques aux besoins des avocats \newline{} $\bullet$ Trouver des solutions à des problèmes avec peu de ressources disponibles  }
  
 
-\section{Compétence Informatique}
+\section{Compétences Informatiques}
 \vspace{1em}
 %\begin{comment}
 \cvdoubleitem{Programmation}{Java, Scala, Python, C/C++, Assembleur, BASH, Ruby}
 			 {System}{Windows, Linux}\vspace{1em}
-\cvdoubleitem{Web framework}{Apex, Django, Wordpress, Ruby on Rails, Play}
-			 {Web}{HTML/CSS , PHP, javascript, jQuery Mobile, AngularJS, Bootstrap  }\vspace{1em}
-\cvdoubleitem{BD}{MySQL, Oracle, SQL, PL/SQL, JPA , JDBC}
+\cvdoubleitem{Framework web}{Apex, Django, Wordpress, Ruby on Rails, Play}
+			 {Web}{HTML/CSS, PHP, javascript, jQuery Mobile, AngularJS, Bootstrap  }\vspace{1em}
+\cvdoubleitem{BD}{MySQL, Oracle, SQL, PL/SQL, JPA, JDBC}
 			 {Génie}{UML, Design Patterns, Agile, Git}\vspace{1em}
 \cvdoubleitem{Outils Développement}{Vim, SublimeText, RubyMine, Intellij, Android Studio}
 			 {Language Markup}{\LaTeX{}, Markdown}\vspace{1em}
@@ -314,10 +314,10 @@
 
 
 
-\section{Travail Pratique \small (École)}
+\section{Travaux Pratiques \small (École)}
 \begin{tabular*}{\textwidth}{p{\dimexpr 0.15\linewidth-1\tabcolsep }
 						 	 p{\dimexpr 0.65\linewidth-1\tabcolsep }} 
-\centering\underline{Langage} &\centering\underline{Description}
+\hspace{-0.5em}\raggedright\underline{Langages} &\centering\underline{Description}
 \end{tabular*}\vspace{-1em}
 \\\\
 
@@ -325,7 +325,7 @@
 \begin{itemize}\setlength{\itemsep}{1pt}
   \setlength{\parskip}{5pt}
   \setlength{\parsep}{0pt}
-\item Jeu de Puissance4 avec un A.I. minmax et une interface. Le jeu a été conçu dans le cadre d'un cours sur les designs pattern. Il y a notamment: Strategy, Command, Memento, Factory, Facade \small \href{https://github.com/GitMyCode/puissance4}{github.com/GitMyCode/puissance4}
+\item Jeu de Puissance4 avec un A.I. minmax et une interface. Le jeu a été conçu dans le cadre d'un cours sur les designs patterns. Il y a notamment: Strategy, Command, Memento, Factory, Facade \small \href{https://github.com/GitMyCode/puissance4}{github.com/GitMyCode/puissance4}
 \item Intelligence artificielle du jeu Connect5(\textit{Go-Moku}). Tous les A.I. de la classe devaient participer à un tournois entre eux. La note était attribuée en fonction du placement après la compétition. Mon A.I. s'est distingué des autres et a obtenu la première place   \small \href{http://gitmycode.github.io/Connect5-Ai/}{gitmycode.github.io/Connect5-Ai} 
 
 \item Solveur du jeu \emph{Sokoban} avec l'algorithme A*  \small \href{https://github.com/GitMyCode/Sokoban-solver}{github.com/GitMyCode/Sokoban-solver}
@@ -359,7 +359,7 @@
 
 
 \vspace{-0.5em}
-\section{Réalisation Technique \small(projets personnels)}
+\section{Réalisations Techniques \small(projets personnels)}
 
 \cvtriplebox
 {\cvboxitem{MineSweeper AI}{}{https://github.com/GitMyCode/Minesweeper-AI}{Java}
