--- a/Martin_Bouchard.tex
+++ b/Martin_Bouchard.tex
@@ -166,8 +166,7 @@
 \renewcommand{\cvboxitem}[5]{%
 	\begin{minipage}[t]{\linewidth}
 	
-	$\bullet$ \textbf{#1}
-	\ifthenelse{\equal{#2}{}}{}{, {\slshape #2}}\par%	
+	$\bullet$ \textbf{#1}\ifthenelse{\equal{#2}{}}{}{, {\slshape #2}}\par%	
 	\raggedright{\scriptsize\href{#3}{#3}}\\
 	{\small\slshape\color{Bittersweet} {#4}}\vspace{0.2em}\\
 	{#5}
@@ -271,13 +270,14 @@
 					 {Développeur back-end et front-end sur une application web en Ruby on Rails }
 					 {$\bullet$ TDD $\bullet$ Développement Agile $\bullet$ Architecture MVC $\bullet$ Git $\bullet$ Ruby on Rails $\bullet$ Rspec/test \\ $\bullet$ Déploiement code production  }
 
-\cventre[1.2em]{2014}{Développeur Web}{Contrat}{ Un re-design d'une page web pour un avocat. Le client voulait un design plus moderne qui serait \emph{ responsive design } pour les visiteurs mobiles. \href{http://www.avocatcriminel.ca/}{www.avocatcriminel.ca}}
+\cventre[1.2em]{2014}{Développeur Web}{Contrat}{ Un re-design d'une page web pour un avocat. Le client voulait un design plus moderne et adaptatif (\emph{responsive design}) pour les visiteurs mobiles. \href{http://www.
+criminel.ca/}{www.avocatcriminel.ca}}
 
 
 \cventre[2em]{2013}{Stagiaire (Développeur)}
 {Ville de Montréal}
 {Conception d'applications d'affaires sur la plateforme de développement web Apex de Oracle.}
-{$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end(Apex) de pages web \\$\bullet$ Conception de schema bd  $\bullet$ Intégration avec LDAP $\bullet$ Architecture d'applications sous forme de services}
+{$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end(Apex) de pages web \\$\bullet$ Conception de schéma bd  $\bullet$ Intégration avec LDAP $\bullet$ Architecture d'applications sous forme de services}
 
 
 \cventre[0.5em]{2012}{Programmeur}
@@ -290,7 +290,7 @@
 \vspace{1em}
 %\begin{comment}
 \cvdoubleitem{Programmation}{Java, Scala, Python, C/C++, Assembleur, BASH, Ruby}
-			 {System}{Windows, Linux}\vspace{1em}
+			 {Système}{Windows, Linux}\vspace{1em}
 \cvdoubleitem{Framework web}{Apex, Django, Wordpress, Ruby on Rails, Play}
 			 {Web}{HTML/CSS, PHP, javascript, jQuery Mobile, AngularJS, Bootstrap  }\vspace{1em}
 \cvdoubleitem{BD}{MySQL, Oracle, SQL, PL/SQL, JPA, JDBC}
@@ -325,8 +325,8 @@
 \begin{itemize}\setlength{\itemsep}{1pt}
   \setlength{\parskip}{5pt}
   \setlength{\parsep}{0pt}
-\item Jeu de Puissance4 avec un A.I. minmax et une interface. Le jeu a été conçu dans le cadre d'un cours sur les designs patterns. Il y a notamment: Strategy, Command, Memento, Factory, Facade \small \href{https://github.com/GitMyCode/puissance4}{github.com/GitMyCode/puissance4}
-\item Intelligence artificielle du jeu Connect5(\textit{Go-Moku}). Tous les A.I. de la classe devaient participer à un tournois entre eux. La note était attribuée en fonction du placement après la compétition. Mon A.I. s'est distingué des autres et a obtenu la première place   \small \href{http://gitmycode.github.io/Connect5-Ai/}{gitmycode.github.io/Connect5-Ai} 
+\item Jeu de Puissance4 avec un A.I. minmax et une interface. Le jeu a été conçu dans le cadre d'un cours sur les designs patterns. Il y a : Strategy, Command, Memento, Factory, Facade \small \href{https://github.com/GitMyCode/puissance4}{github.com/GitMyCode/puissance4}
+\item Intelligence artificielle du jeu Connect5(\textit{Go-Moku}). Toutes les A.I. de la classe devaient participer à un tournois entre eux. La note était attribuée en fonction du placement après la compétition. Mon A.I. s'est distingué des autres et a obtenu la première place   \small \href{http://gitmycode.github.io/Connect5-Ai/}{gitmycode.github.io/Connect5-Ai} 
 
 \item Solveur du jeu \emph{Sokoban} avec l'algorithme A*  \small \href{https://github.com/GitMyCode/Sokoban-solver}{github.com/GitMyCode/Sokoban-solver}
 
@@ -339,11 +339,11 @@
   \setlength{\parskip}{5pt}
   \setlength{\parsep}{0pt}
 \item Implémentation des fonctionnalités de la commande \emph{find} d'Unix
-\item Simulation de l'algorithme de remplacement des pages (Optimial, Horloge, LRU). Conception d'un tableau dynamique 2 dimensions.
+\item Simulation de l'algorithme de remplacement des pages (Optimial, Horloge, LRU). Conception d'un tableau dynamique à deux dimensions.
 
 \item Jeu de \emph{snake} avec une implémentation d'un tableau dynamique
-\item Système interrogeable prenant en entrée des données de location de personnes. Le temps d'éxécution du programme devait être optimisé \emph{(meilleur temps de la classe)}. Implémentation d'un Arbre-map
-\item Système de recherche dans un Graph. Implémentation de l'algorithme de Tarjan et Dijkstra
+\item Système interrogeable prenant en entrée des données de localisation de personnes. Le temps d'exécution du programme devait être optimisé \emph{(meilleur temps de la classe)}. Implémentation d'un Arbre-map
+\item Système de recherche dans un graphe. Implémentation de l'algorithme de Tarjan et Dijkstra
 \end{itemize}
 }
 \cvdetaillist{\small Nodejs/Mongodb HTML/CSS}{$\bullet$ Application web couvrant la plupart des verbes http sur une base de données mongodb   \newline\small{\href{http://gitmycode.github.io/inf4375-tp3/}{http://gitmycode.github.io/inf4375-tp3/}}}
@@ -364,11 +364,11 @@
 \cvtriplebox
 {\cvboxitem{MineSweeper AI}{}{https://github.com/GitMyCode/Minesweeper-AI}{Java}
 {Un projet initialement personnel qui a été repris pour un projet de fin de session d'un cours d'Intelligence Artificielle}}
-{\cvboxitem{Encefal}{projet en collaboration}{http://foireauxlivres.uqam.ca/}{Django}
-{La foire aux livres permet aux etudiants de vendre leurs livres à d'autres étudiants.}}
+{\cvboxitem{EnceFal}{projet en collaboration}{http://foireauxlivres.uqam.ca/}{Django}
+{La foire aux livres permet aux étudiants de vendre leurs livres à d'autres étudiants.}}
 {
-\cvboxitem{Site web}{abandonné}{www.courspiano.ca}{Wordpress,PHP}
-{Un site construit sur la plateforme Wordpress. Design fait sur photoshop puis realisé en theme-wordpress}
+\cvboxitem{Site web}{}{www.courspiano.ca}{Wordpress,PHP}
+{Un site construit sur la plateforme Wordpress. Design fait sur photoshop et puis création d'un thème Wordpress}
 }
 
 
@@ -377,23 +377,22 @@
 {\cvboxitem{Programming Mobile Applications for Android Handheld Systems}{}{https://class.coursera.org/android-001}{Android, Java}
 {J'ai suivi un cours de développement sur la plateforme Android. C'est un cours en ligne donné par l'Université du Maryland via le site coursera.org}
 }
-{\cvboxitem{Site web}{abandonné}{http://coursmusique.codefaction.webfactional.com}{Django}
-{Un site designé sur photoshop et transposé en html/css.}}
+{\cvboxitem{Jeu Android}{en cours}{https://github.com/GitMyCode/laser-game}{Unity,C\#}{Une idée de jeu android que j'ai eue. C'est principalement pour le plaisir de le faire plus que pour le jeu. C'est un jeu en 2d real-time multiplayer}}
 {
 \cvboxitem{Site Web}{contrat}{http://gitmycode.github.io/avocatmontreal/}{ HTML/CSS/Javascript}
-{Un contrat de mise à jour d'un siteweb vers un design plus moderne et mobile friendly }
+{Un contrat de mise à jour d'un site web vers un design plus moderne et mobile friendly }
 }
 \cvtriplebox
-{\cvboxitem{Android Game}{en cours}{https://github.com/GitMyCode/laser-game}{Unity,C\#}{Une petite idée de jeu android que j'ai eue. C'est principalement pour le plaisir de le faire plus que pour le jeu. C'est un jeu en 2d real-time multiplayer}}
+{}
 {\cvboxitem{Google Codejam}{}{https://github.com/GitMyCode/code-jam}{Java, Scala, Dynamic programming}
-{\href{https://code.google.com/codejam}{Google codejam} est un site de compétition de programmation. Ce \emph{repo} contient mes solutions. Le code n'est malheureusement pas très entretenu }}
+{\href{https://code.google.com/codejam}{Google codejam} est un site de compétition de programmation. Ce \emph{repository} contient mes solutions. }}
 
 {}
 
 
 
 \vspace{-2em}
-\section{Autre}\vspace{-2.5em}
+\section{Autres}\vspace{-2.5em}
 \begin{comment}
 \begin{tabular*}{\linewidth}{  
                    p{\dimexpr 0.33\linewidth-1\tabcolsep } 
@@ -422,14 +421,14 @@
 
 %\begin{comment}
 \cvtriplebox{
-\subsection{Langue}
+\subsection{Langues}
 \begin{itemize}
 \item[$\bullet$] Français langue maternelle 
 \item Anglais fonctionnel
 \end{itemize}
 }
 {
-\subsection{Intérêt}
+\subsection{Intérêts}
 \begin{itemize}
 \item[$\bullet$] Programmation : Toujours à la recherche de projets intéressants !
 \item Guitare
