ajout grails et groovy

--- a/Martin_Bouchard.tex
+++ b/Martin_Bouchard.tex
@@ -289,9 +289,9 @@ criminel.ca/}{www.avocatcriminel.ca}}
 \section{Compétences Informatiques}
 \vspace{1em}
 %\begin{comment}
-\cvdoubleitem{Programmation}{Java, Scala, Python, C/C++, Assembleur, BASH, Ruby}
+\cvdoubleitem{Programmation}{Java,Groovy, Scala, Python, C/C++, Assembleur, BASH, Ruby}
 			 {Système}{Windows, Linux}\vspace{1em}
-\cvdoubleitem{Framework web}{Apex, Django, Wordpress, Ruby on Rails, Play}
+\cvdoubleitem{Framework web}{Grails, Apex, Django, Wordpress, Ruby on Rails, Play}
 			 {Web}{HTML/CSS, PHP, javascript, jQuery Mobile, AngularJS, Bootstrap  }\vspace{1em}
 \cvdoubleitem{BD}{MySQL, Oracle, SQL, PL/SQL, JPA, JDBC}
 			 {Génie}{UML, Design Patterns, Agile, Git}\vspace{1em}
