--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -9,7 +9,7 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[french]{babel}
-\inputencoding{latin1} % important pour les carathere francais
+%\inputencoding{latin1} % important pour les carathere francais
 
 \usepackage[left=1cm,right=1.5cm,top=1.5cm,bottom=0.5cm]{geometry}
 %\usepackage[top=2.1cm, bottom=1.1cm, left=2cm, right=2cm]{geometry}
@@ -179,8 +179,8 @@
 \begin{minipage}[b]{0.25\textwidth}\raggedright
 \begin{tabular}{|r}
 \\
-  \textit{4449 rue Adam}  \\
-   \textit{Montréal H1V 1T7}\\ 
+  \textit{3509 rue Wellington}  \\
+   \textit{Montréal H4G 1T2}\\ 
   \textit{marbouchl@gmail.com} \\
    \textit{438 888 9741}  
 \end{tabular}
@@ -189,22 +189,25 @@
 
 
 \section{Sommaire}
-{Informaticien en génie logiciel de formation, j'ai aussi des connaissances dans  le domaine des arts visuels et de la criminologie. En dehors de mes cours, j'ai développé des compétences pour le python, le developpement android et la programmation web (front-end/back-end).}
+{Informaticien en génie logiciel de formation, j'ai aussi fais un passage dans le domaines des arts visuels et de la criminologie. Durant mes temps libres j'aiguise mon savoir faire en algorithmie et j'ai des projets de  \textit{machine learning}}
 \vspace{-1em}
 \section{Formation}
 
+\cventre{2017}{Deep Learning NanoDegree}{Udacity}{https://www.udacity.com/course/deep-learning-nanodegree-foundation--nd101}{}
 \cventre{2011-2014}{Baccalauréat informatique}{Université du Québec à Montréal}{}{}
 \cventre{2010}{Certificat en Criminologie}{ Université de Montréal}{}{}
-
 \cventre{2008}{Attestation Études Cinématographiques}{École de Cinéma et de télévision de Québec}{}{}
-
-
 
 \section{Expérience Professionnelle}
 
+\cventre[1.3em]{2015}{Développeur full-stack}
+{GSOFT}
+{Travail en mode agile sur plusieurs projet avec des équipes allant de 2 à 6 développeurs. Responsable de l'architecture de plusieurs fonctionnalités et impliqué dans la conception de beaucoup d'autres autant front-end que back-end. }
+{$\bullet$ Agile  $\bullet$ Conception d'API $\bullet$ SQL Server $\bullet$ RavenDB (non relationnelle) $\bullet$ Microsoft Azure $\bullet$ Architecture d'application sous forme de service $\bullet$ Relation direct avec les clients }
+
 \cventre[1.3em]{2013}{Stagiaire}
 {Ville de Montréal}
-{Conception d'applications d'affaires sur la plateforme de developpement web Apex de Oracle.}
+{Conception d'applications d'affaires sur la plateforme de développement web Apex de Oracle.}
 {$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end(Apex) de page web \\$\bullet$ Conception de schema bd  $\bullet$ Intégration avec LDAP $\bullet$ Architecture d'application sous forme de service}
 
 
