--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -2,7 +2,8 @@
 % Style casual en orange
 % Article complet : http://blog.madrzejewski.com/creer-cv-elegant-latex-moderncv/
 
-\documentclass[a4paper,10pt]{extarticle}
+\documentclass[a4paper,9pt]{extarticle}
+%\documentclass[11pt,a4paper]{moderncv}
 
 %\usepackage{fourier-orns} \Huge\hrulefill\hspace{0.2cm} \floweroneleft\floweroneright \hspace{0.2cm} \hrulefill
 %\usepackage{fancyhdr} \pagestyle{fancy}  \lhead{\hrule \vbox to 10pt{\vrule height 05pt width 1pt} LEFT}
@@ -171,7 +172,7 @@
 \begin{tabular}{l}
 
 \fontsize{43}{36}\textsf{Martin Bouchard}%
- \vspace{0.6em}\\\LARGE{\textit{  Étudiant en Informatique}}
+ \vspace{0.6em}\\\LARGE{\textit{Développeur}}
 \end{tabular}
 \end{minipage}
 \hspace{0.5cm}
@@ -194,6 +195,7 @@
 \section{Formation}
 
 \cventre{2017}{Deep Learning NanoDegree}{Udacity}{https://www.udacity.com/course/deep-learning-nanodegree-foundation--nd101}{}
+\cventre{2014}{Programming Mobile Applications for Android Handheld Systems}{Coursera} {https://www.coursera.org/account/accomplishments/certificate/8BPGJB4YMG}{}
 \cventre{2011-2014}{Baccalauréat informatique}{Université du Québec à Montréal}{}{}
 \cventre{2010}{Certificat en Criminologie}{ Université de Montréal}{}{}
 \cventre{2008}{Attestation Études Cinématographiques}{École de Cinéma et de télévision de Québec}{}{}
@@ -215,9 +217,59 @@
 {Fasken Martineau DuMoulin, S.E.N.C.R.L}
 {Programmation de templates avec l'API de XpressDox. Cette API s'intègre avec Microsoft Word et automatise la génération de document. J'étais le seul qui s'avais utiliser Xpressdox dans l'entreprise.}
 {$\bullet$ Développer un framework $\bullet$ Proposer des solutions techniques aux besoins des avocats \newline{} $\bullet$ Trouver des solutions à des problèmes sans ressource}
- 
 
-\cventre[0.5em]{2011}{Commis-Archive}{Agence des Services Frontaliers du Canada.}{Gestion des dossiers dans les archives des services frontalier}
+\section{Réalisation Technique}
+\textbf{Système de gestion pour FNCM} \newline{}
+\small{Modernisation de leur ancien système pour un nouveau en mode SAS. Le nouveau système devait avoir toute les fonctionnalitées de l'ancien, mais avec des améliorations de vitesse plus d'autres fonctionnalité} \vspace{1em}\newline{} 
+\begin{tabular*}{\linewidth}{p{\dimexpr 0.20\linewidth-1\tabcolsep }
+		p{\dimexpr 0.84\linewidth-1\tabcolsep }} 
+	\fontsize{8}{9}\textit{BD (SQL)} & \small{Scriptes sql complexe afin d'optimiser certaines mise-à-jour dont la performance était importante.} \vspace{0.3em}\\
+	\fontsize{8}{9}\textit{Front-end (Knockout)} & \small{Mécanique d'édition et de d'annulation d'une modification.} \vspace{0.3em}\\
+	\fontsize{8}{9}\textit{Front-end (Knockout)} & \small{Développer une interface et une mécanique de recherche avancée.} \vspace{0.3em}\\
+	\fontsize{8}{9}\textit{C\#, rdlc, Entity-Framework} & \small{Développement de mécanismes de générations de rapport.} 
+	
+\end{tabular*}
+
+\textbf{SAS de gestion syndicale - Sentinelle} (\href{https://www.saisentinelle.ca/}{https://www.saisentinelle.ca/}) \newline{}
+\small{ Sentinelle est une plateforme \textit{SAS} \textit{multi-tetant} et personnalisable pour aider les syndicats de plusieurs domain dans la gestion de leur membres} \vspace{1em}\newline{} 
+\begin{tabular*}{\linewidth}{p{\dimexpr 0.20\linewidth-1\tabcolsep }
+		p{\dimexpr 0.80\linewidth-1\tabcolsep }} 
+	\fontsize{8}{9}\textit{BD Raven(NO SQL)} & \small{Conceptualisé un schéma de base de donnée configurable pour adapter les différents besoin d'un client à l'autre} \vspace{0.3em}\\
+	\fontsize{8}{9}\textit{Front-end (Knockout)} & \small{Développement de plusieurs composante \textit{responsive} et \textit{ré-utilisable} qui ont accéléré le développement et la stabilité} \vspace{0.3em}\\
+	\fontsize{8}{9}\textit{C\#} & \small{Conception d'un engin de règle dynamique. Cette fonctionnalité permet au clients de configurer des alerts selon des filtres avec des conditions selon certains événement dans le système}
+	
+\end{tabular*}
+
+
+
+\begin{tabular*}{\linewidth}{p{\dimexpr 0.13\linewidth-1\tabcolsep }
+		p{\dimexpr 0.78\linewidth-1\tabcolsep }} 
+	
+	\textbf{Système de gestion pour FNCM} &  \vspace{-0.5em}
+	\begin{itemize}
+		
+		\item Modernisation de leur ancien système pour un nouveau en mode SAS. Le nouveau système devait avoir toute les fonctionnalitées de l'ancien, mais avec des améliorations de vitesse plus d'autres fonctionnalité 
+		\item Programmes Java utilisant  JPA et JDBC 
+	\end{itemize}
+	\\
+	\textbf{C++} & \vspace{-0.5em}
+	
+	\begin{itemize}
+		\item Jeu de \emph{snake}
+		\item Système interrogable prenant en input des données de location de personnes. Le temps d'éxécution du programme devait être optimisé. Implentation d'un Arbre-map
+		\item Système de recherche dans un Graph. Implentation de l'algorythme de Tarjan et Dijkstra
+	\end{itemize}
+	\\
+	\textbf{C} & \vspace{-0.5em}
+	
+	\begin{itemize}
+		\item Implémentation des fonctionnalités de la commande \emph{find} d'Unix
+		\item Simulation de l'algorithme de remplacement des pages (Optimial, Horloge, LRU). Conception d'un tableau dynamique 2 dimmensions.
+	\end{itemize}
+	
+	
+\end{tabular*}
+
 
 \section{Compétence Informatique}
 
@@ -242,13 +294,13 @@ UML, Design Patterns\\
 */
 
 
-
+\newpage
 \section{Travaux Pratiques}
 \begin{tabular*}{\textwidth}{p{\dimexpr 0.15\linewidth-1\tabcolsep }
 						 	 p{\dimexpr 0.65\linewidth-1\tabcolsep }} 
 \centering\textbf{\underline{Langage}} &\centering\textbf{\underline{Description}}
 \end{tabular*}
-\\\\
+
 \begin{tabular*}{\linewidth}{p{\dimexpr 0.13\linewidth-1\tabcolsep }
 						 	 p{\dimexpr 0.78\linewidth-1\tabcolsep }} 
 						 	 
@@ -276,8 +328,6 @@ UML, Design Patterns\\
 
 
 \end{tabular*}
-
-
 
 \section{Réalisation Technique}
 
